--- a/changeable-list/index.html
+++ b/changeable-list/index.html
@@ -10,7 +10,7 @@
     <h1 class="text-center">Danh sách học viên</h1><a class="bg-success align-self-start btn btn--add my-5" href="details.html"><span class="text-light"> <i class="fas fa-plus-circle"></i></span><span class="text-light ml-2">Thêm học viên </span></a>
     <table class="table table-striped">
       <thead class="thead-dark">
-        <tr>
+        <tr class="table-head">
           <th>Họ tên</th>
           <th>Năm sinh</th>
           <th>Email</th>
@@ -19,7 +19,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr class="users">
           <td>Joe Biden</td>
           <td>1942</td>
           <td>johnbiden@gmail.com</td>
@@ -28,7 +28,7 @@
             <button class="btn btn--delete text-danger"><span><i class="fas fa-trash-alt"></i></span><span class="ml-2">Xóa</span></button>
           </td>
         </tr>
-        <tr>
+        <tr class="users">
           <td>Kim Jong-un </td>
           <td>1984</td>
           <td>kimjongun@gmail.com</td>
@@ -37,7 +37,7 @@
             <button class="btn btn--delete text-danger"> <span><i class="fas fa-trash-alt"></i></span><span class="ml-2">Xóa</span></button>
           </td>
         </tr>
-        <tr>
+        <tr class="users">
           <td>Vladimir Putin</td>
           <td>1952</td>
           <td>vladimirputin@gmail.com</td>
@@ -49,7 +49,8 @@
       </tbody>
     </table>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </div>
 </body>
