--- a/halo/index.html
+++ b/halo/index.html
@@ -32,10 +32,7 @@
             </ul>
           </div>
           <div class="log-cart-search">
-            <div class="logreg-togglers-wrapper">
-              <a class="hidden-till-md log-max logreg-togglers" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg"> 
-                <span>Đăng nhập/Đăng ký</span>
-              </a>
+            <div class="logreg-togglers-wrapper"><a class="hidden-till-md log-max logreg-togglers" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg"> <span>Đăng nhập/Đăng ký</span></a>
               <div class="dropdown-menu"><a class="dropdown-item" href="#"> <span class="mr-4"> <i class="fas fa-id-card"></i></span><span>Thông tin cá nhân</span></a><a class="dropdown-item logout" href="#"> <span class="mr-4"> <i class="fas fa-sign-out-alt"></i></span><span>Đăng xuất  </span></a></div>
             </div><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i>
               <div class="cart__badge-wrapper"><span class="cart__badge">0</span></div></a>
@@ -97,6 +94,26 @@
             <div class="modal-footer">
               <p class="mx-auto log">Chưa có tài khoản? <span class="logreg-portal logreg-portal--to-reg">Đăng ký ngay</span></p><span class="logreg-portal logreg-portal--to-log mx-auto reg">Quay lại đăng nhập</span>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="updates">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <!-- Modal Header-->
+            <div class="modal-header">
+              <h1 class="modal-title">What&apos;s new</h1>
+              <button class="close" type="button" data-dismiss="modal">&times;</button>
+            </div>
+            <!-- Modal body-->
+            <div class="modal-body">
+              <ul> 
+                <li>- v1.1 (14/03): Tối ưu</li>
+                <li>- v1.2 (16/03): Thêm tính năng đăng ký/đăng nhập/đăng xuất (sử dụng local storage)</li>
+              </ul>
+            </div>
+            <!-- Modal footer-->
+            <div class="modal-footer justify-content-between"><span class="updates__hide-warning">Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở trang chủ trong 1 tab mới </span></div>
           </div>
         </div>
       </div>
@@ -300,6 +317,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/aos-init.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
