--- a/halo/index.html
+++ b/halo/index.html
@@ -133,7 +133,7 @@
             <div class="modal-body">
               <ul> 
                 <li>- v1.1 (14/03): Tối ưu</li>
-                <li>- v1.2 (16/03): Thêm tính năng đăng ký/đăng nhập/đăng xuất (sử dụng local storage)</li>
+                <li>- v1.2 (16/03): Giả lập đăng ký/đăng nhập/đăng xuất cơ bản (sử dụng local storage, chỉ hiển thị được tên người dùng trên thanh nav)</li>
               </ul>
             </div>
             <!-- Modal footer-->
