--- a/halo/parts/updates.html
+++ b/halo/parts/updates.html
@@ -1,6 +1,6 @@
 
 <div class="modal fade" id="updates">
-  <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <!-- Modal Header-->
       <div class="modal-header">
@@ -10,8 +10,21 @@
       <!-- Modal body-->
       <div class="modal-body">
         <ul> 
-          <li>- v1.1 (14/03): Tối ưu</li>
-          <li>- v1.2 (16/03): Giả lập đăng ký/đăng nhập/đăng xuất cơ bản (sử dụng local storage, chỉ hiển thị được tên người dùng trên thanh nav)</li>
+          <li class="mb-3">
+            <h2 class="font-weight-bold text-left">v1.1: </h2>
+            <ul> 
+              <li>- Tối ưu mục review</li>
+              <li>- Fix bug mất viền item khi focus</li>
+              <li>- Giản lược animation</li>
+            </ul>
+          </li>
+          <li class="mb-3">
+            <h2 class="font-weight-bold text-left">v1.2: </h2>
+            <ul> 
+              <li>- Mô phỏng đăng ký/đăng nhập/đăng xuất cơ bản (sử dụng local storage, chỉ hiển thị được tên người dùng trên thanh nav)</li>
+              <li>- Mô phỏng loading trang</li>
+            </ul>
+          </li>
         </ul>
       </div>
       <!-- Modal footer-->
