--- a/changeable-list/details.html
+++ b/changeable-list/details.html
@@ -11,26 +11,25 @@
     <form class="w-100" action="">
       <div class="form-group">
         <label for="name">Họ tên <span>*</span></label>
-        <input type="text">
+        <input id="input__name" type="text">
       </div>
       <div class="form-group"> 
         <label for="name">Năm sinh </label>
-        <input type="text">
+        <input id="input__dob" type="text">
       </div>
       <div class="form-group"> 
         <label for="name">Email <span>*</span></label>
-        <input type="text">
+        <input id="input__email" type="text">
       </div>
       <div class="form-group"> 
         <label for="name">Phone <span>*</span></label>
-        <input type="text">
+        <input id="input__phone" type="text">
       </div>
-      <div class="form-group d-flex justify-content-center align-items-center"><a class="btn btn--back bg-secondary d-flex justify-content-center align-items-center text-light" href="index.html"><span class="mr-2"><i class="fas fa-angle-left"></i></span><span>Quay lại </span></a>
-        <button class="ml-3 btn bg-success text-light"> <span class="mr-2"><i class="fas fa-save"></i></span><span>Lưu</span></button>
-      </div>
+      <div class="form-group d-flex justify-content-center align-items-center"><a class="btn btn--back bg-secondary d-flex justify-content-center align-items-center text-light" href="index.html"><span class="mr-2"><i class="fas fa-angle-left"></i></span><span>Quay lại </span></a><a class="ml-3 btn bg-success text-light" id="save" href="index.html"><span class="mr-2"><i class="fas fa-save"></i></span><span>Lưu</span></a></div>
     </form>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </div>
 </body>
