--- a/changeable-list/details.html
+++ b/changeable-list/details.html
@@ -25,11 +25,32 @@
         <label for="name">Phone <span>*</span></label>
         <input id="input__phone" type="text">
       </div>
-      <div class="form-group d-flex justify-content-center align-items-center"><a class="btn btn--back bg-secondary d-flex justify-content-center align-items-center text-light" href="index.html"><span class="mr-2"><i class="fas fa-angle-left"></i></span><span>Quay lại </span></a><a class="ml-3 btn bg-success text-light" id="save" href="index.html"><span class="mr-2"><i class="fas fa-save"></i></span><span>Lưu</span></a></div>
+      <div class="form-group d-flex justify-content-center align-items-center"><a class="btn btn--back bg-secondary d-flex justify-content-center align-items-center text-light" href="index.html"><span class="mr-2"><i class="fas fa-angle-left"></i></span><span>Quay lại </span></a>
+        <button class="ml-3 btn bg-success text-light" id="save" type="button"><span class="mr-2"><i class="fas fa-save"></i></span><span>Lưu</span></button>
+      </div>
     </form>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script>
+      $("#save").click(() => {
+        let confirmPopup = confirm(`Thêm học viên mới ${$("input")[0].value} thành công!
+        Bạn có muốn quay về trang chủ?`)
+        if (confirmPopup == true) {
+          location.replace("index.html")
+        }
+        $.post(
+          "http://localhost:3000/users",
+          {
+          "name": $("input")[0].value,
+          "birthday": $("input")[1].value,
+          "email": $("input")[2].value,
+          "phone": $("input")[3].value
+          }
+        );
+      });
+      
+            
+    </script>
   </div>
 </body>
