--- a/changeable-list/details.html
+++ b/changeable-list/details.html
@@ -34,7 +34,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script>
       $("#save").click(() => {
-        let confirmPopup = confirm(`Thêm học viên mới ${$("input")[0].value} thành công!
+        let confirmPopup = confirm(`
+        Thêm học viên mới ${$("input")[0].value} thành công!
         Bạn có muốn quay về trang chủ?`)
         if (confirmPopup == true) {
           location.replace("index.html")
