--- a/journey-card-game/parts/layout.html
+++ b/journey-card-game/parts/layout.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body> 
+    <div class="version-info"> 
+      <p class="version">EARLY ACCESS v0.1 </p>
+    </div>
     <div class="modal-bg"></div>
     <div class="transition-screen"></div>
     <button class="test-btn1">Test #1</button>
