--- a/journey-card-game/index.html
+++ b/journey-card-game/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mulligan stage - Journey the card game</title>
+    <title>Journey the card game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/title.css">
   </head>
   <body> 
+    <div class="version-info"> 
+      <p class="version">EARLY ACCESS v0.1 </p>
+    </div>
     <div class="modal-bg"></div>
     <div class="transition-screen"></div>
     <button class="test-btn1">Test #1</button>
     <button class="test-btn2">Test #2</button><a class="test-btn3" href="mulligan.html">Test #3</a>
     <div class="screen d-flex justify-content-center align-items-center">
-      <div class="login-box box-1">
-        <h1 class="login-header text-center">Đăng nhập </h1>
-        <h1 class="register-header text-center hidden">Đăng ký</h1>
+      <div class="title-box box-1">
+        <h1 class="login-header text-center">Login</h1>
+        <h1 class="register-header text-center hidden">Register</h1>
         <form class="d-flex flex-column align-items-center" action="">
           <input type="text" placeholder="Username">
-          <button class="btn btn--login" type="button">Xác nhận </button>
-          <button class="btn btn--register hidden" type="button">Xác nhận </button>
+          <button class="btn btn--login" type="button">Confirm</button>
+          <button class="btn btn--register hidden" type="button">Confirm</button>
         </form>
         <div class="log-reg-wrapper"> 
-          <p class="to-register text-center">Tạo username mới </p>
-          <p class="to-login text-center hidden">Quay về đăng nhập</p>
+          <p class="to-register text-center">Create new profile</p>
+          <p class="to-login text-center hidden">Return to login</p>
         </div>
       </div>
       <div class="loading d-flex justify-content-center align-items-end hidden--fade">
