--- a/journey-card-game/lobby.html
+++ b/journey-card-game/lobby.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mulligan stage - Journey the card game</title>
+    <title>Journey the card game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mulligan.css">
+    <link rel="stylesheet" href="css/lobby.css">
   </head>
   <body> 
     <div class="version-info"> 
@@ -17,9 +17,10 @@
     <div class="transition-screen"></div>
     <button class="test-btn1">Test #1</button>
     <button class="test-btn2">Test #2</button><a class="test-btn3" href="mulligan.html">Test #3</a>
-    <div class="screen"> </div>
+    <div class="screen"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"> </script>
     <script src="js/script.js"> </script>
+    <script src="js/lobby.js"> </script>
   </body>
 </html>
