--- a/journey-card-game/lobby.html
+++ b/journey-card-game/lobby.html
@@ -15,9 +15,51 @@
     </div>
     <div class="modal-bg"></div>
     <div class="transition-screen"></div>
+    <div class="loading d-flex justify-content-center align-items-end hidden--fade">
+      <h1 class="loading-header me-3">Loading</h1>
+      <div class="loading-icon"><span class="spinner-grow spinner-grow-sm"></span><span class="spinner-grow spinner-grow-sm mx-2"></span><span class="spinner-grow spinner-grow-sm"></span></div>
+    </div>
     <button class="test-btn1">Test #1</button>
     <button class="test-btn2">Test #2</button><a class="test-btn3" href="mulligan.html">Test #3</a>
-    <div class="screen"></div>
+    <div class="screen d-flex justify-content-between align-items-center"><img class="logo" src="./images/logo-white.png" alt="">
+      <div class="menu"> 
+        <div class="user-info d-flex justify-content-between align-items-center"> 
+          <h1 class="username">Player One</h1>
+          <h1 class="userlevel">1</h1>
+        </div>
+        <ul class="menu-list"> 
+          <li class="menu-start d-flex justify-content-center align-items-center"> 
+            <h2>Start</h2>
+          </li>
+          <li class="menu-store d-flex justify-content-center align-items-center"> 
+            <h2>Store</h2>
+          </li>
+          <li class="menu-deck d-flex justify-content-center align-items-center"> 
+            <h2>Deck</h2>
+          </li>
+          <li class="menu-stats d-flex justify-content-center align-items-center"> 
+            <h2>Stats </h2>
+          </li>
+          <li class="menu-logout d-flex justify-content-center align-items-center"> 
+            <h2>Logout</h2>
+          </li>
+        </ul>
+      </div>
+      <div class="process">
+        <h1 class="process-stage">Chapter I: Dying Light</h1>
+        <h1 class="process-stage">Chapter I: Again All Odds</h1>
+        <h1 class="process-stage">Chapter I: Shadow Die Twice</h1>
+        <h1 class="process-stage">Chapter I: Redemption</h1>
+        <h1 class="process-stage">Chapter I: Celeste</h1>
+        <h1 class="process-stage">Chapter I: Celeste</h1>
+      </div>
+      <div class="news">
+        <h2>What's new</h2>
+        <ul class="news-list"> 
+          <li>Beta! </li>
+        </ul>
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"> </script>
     <script src="js/script.js"> </script>
