--- a/journey-card-game/parts/layout.html
+++ b/journey-card-game/parts/layout.html
@@ -13,6 +13,10 @@
     </div>
     <div class="modal-bg"></div>
     <div class="transition-screen"></div>
+    <div class="loading d-flex justify-content-center align-items-end hidden--fade">
+      <h1 class="loading-header me-3">Loading</h1>
+      <div class="loading-icon"><span class="spinner-grow spinner-grow-sm"></span><span class="spinner-grow spinner-grow-sm mx-2"></span><span class="spinner-grow spinner-grow-sm"></span></div>
+    </div>
     <button class="test-btn1">Test #1</button>
     <button class="test-btn2">Test #2</button><a class="test-btn3" href="mulligan.html">Test #3</a>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
