--- a/journey-card-game/index.html
+++ b/journey-card-game/index.html
@@ -7,7 +7,7 @@
     <title>Journey the card game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body> 
     <div class="version-info"> 
@@ -15,6 +15,10 @@
     </div>
     <div class="modal-bg"></div>
     <div class="transition-screen"></div>
+    <div class="loading d-flex justify-content-center align-items-end hidden--fade">
+      <h1 class="loading-header me-3">Loading</h1>
+      <div class="loading-icon"><span class="spinner-grow spinner-grow-sm"></span><span class="spinner-grow spinner-grow-sm mx-2"></span><span class="spinner-grow spinner-grow-sm"></span></div>
+    </div>
     <button class="test-btn1">Test #1</button>
     <button class="test-btn2">Test #2</button><a class="test-btn3" href="mulligan.html">Test #3</a>
     <div class="screen d-flex justify-content-center align-items-center">
@@ -31,13 +35,10 @@
           <p class="to-login text-center hidden">Return to login</p>
         </div>
       </div>
-      <div class="loading d-flex justify-content-center align-items-end hidden--fade">
-        <h1 class="loading-header me-3">Loading</h1>
-        <div class="loading-icon"><span class="spinner-grow spinner-grow-sm"></span><span class="spinner-grow spinner-grow-sm mx-2"></span><span class="spinner-grow spinner-grow-sm"></span></div>
-      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"> </script>
     <script src="js/script.js"> </script>
+    <script src="js/index.js"> </script>
   </body>
 </html>
