--- a/halo/parts/updates.html
+++ b/halo/parts/updates.html
@@ -26,6 +26,13 @@
             </ul>
           </li>
         </ul>
+        <div class="projects mt-5">
+          <p class="mb-2">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
+          <ul> 
+            <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, early access</a></li>
+            <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://changeable-list.herokuapp.com/">- Changeable list: bài tập quản lý danh sách cơ bản, mô phỏng sử dụng REST API</a></li>
+          </ul>
+        </div>
       </div>
       <!-- Modal footer-->
       <div class="modal-footer justify-content-between"><span class="updates__hide-warning">Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở trang chủ trong 1 tab mới </span></div>
