--- a/halo/index.html
+++ b/halo/index.html
@@ -151,7 +151,7 @@
               <div class="projects mt-5">
                 <p class="mb-2">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
                 <ul> 
-                  <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, early access</a></li>
+                  <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, alpha test</a></li>
                   <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://changeable-list.herokuapp.com/">- Changeable list: bài tập quản lý danh sách cơ bản, mô phỏng sử dụng REST API</a></li>
                 </ul>
               </div>
