--- a/hocngay/index.html
+++ b/hocngay/index.html
@@ -7,15 +7,15 @@
     <title>Học Ngay</title>
     <script src="https://kit.fontawesome.com/91f9395357.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../resources/lib/prism.css">
-    <link rel="stylesheet" href="../../resources/css/font-init.css">
-    <link rel="stylesheet" href="../../resources/css/layout.css">
-    <link rel="stylesheet" href="../../resources/css/index.css">
+    <link rel="stylesheet" href="resources/lib/prism.css">
+    <link rel="stylesheet" href="resources/css/font-init.css">
+    <link rel="stylesheet" href="resources/css/layout.css">
+    <link rel="stylesheet" href="resources/css/index.css">
 </head> 
 <body>
     <header id="header">
         <div class="upper-header d-none d-xl-flex container">
-            <img src="../../resources/images/logo-blue.png" alt="">
+            <img src="resources/images/logo-blue.png" alt="">
             <div class="input-group full-search-wrapper">
                 <input type="text" class="form-control full-search" placeholder="Tìm kiếm...">
                 <div class="input-group-append">
@@ -29,7 +29,7 @@
     <div class="navbar-wrapper">
         <nav class="navbar navbar-expand-xl container">
             <a class="navbar-brand d-xl-none" href="#">
-                <img src="../../resources/images/logo.png" alt="">
+                <img src="resources/images/logo.png" alt="">
             </a>
 
             <!-- Toggler/collapsibe Button -->
@@ -375,7 +375,7 @@
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="../../resources/lib/prism.js"></script>
-    <script src="../../resources/js/index.js"></script>
+    <script src="resources/lib/prism.js"></script>
+    <script src="resources/js/index.js"></script>
 </body>
 </html>
