update PLANETARY link

--- a/halo/parts/updates.html
+++ b/halo/parts/updates.html
@@ -25,17 +25,24 @@
               <li>- Mô phỏng loading trang</li>
             </ul>
           </li>
+          <li class="mb-3">
+            <h2 class="font-weight-bold text-left">v1.3: </h2>
+            <ul> 
+              <li>- Tối ưu kich thước một số tài nguyên (R.I.P "space-background-4K-Ultra-HD-Pro-Max.png")</li>
+            </ul>
+          </li>
         </ul>
         <div class="projects mt-5">
-          <p class="mb-2">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
+          <p class="mb-2">Các project khác của tôi:  </p>
           <ul> 
-            <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, alpha test</a></li>
-            <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://changeable-list.herokuapp.com/">- Changeable list: bài tập quản lý danh sách cơ bản, mô phỏng sử dụng REST API</a></li>
+            <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://ducnt444.github.io/planetary/">- PLANETARY: demo space travel (mobile), sử dụng Vue.JS</a></li>
+            <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://changeable-list.herokuapp.com/">- Changeable list: demo sử dụng Jquery, DOM manipulation, REST API cơ bản</a></li>
           </ul>
+          <p class="mt-3 mb-2 text-center font-italic">ducnt444@gmail.com @ 2021</p>
         </div>
       </div>
       <!-- Modal footer-->
-      <div class="modal-footer justify-content-between"><span class="updates__hide-warning">Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở trang chủ trong 1 tab mới </span></div>
+      <div class="modal-footer justify-content-between"><span class="updates__hide-warning">Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở lại trang web trong 1 tab mới </span></div>
     </div>
   </div>
 </div>
