--- a/halo/index.html
+++ b/halo/index.html
@@ -142,8 +142,9 @@
               <div class="projects mt-5">
                 <p class="mb-2">Các project khác của tôi:  </p>
                 <ul> 
-                  <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://ducnt444.github.io/planetary/">- PLANETARY: demo space travel (mobile), sử dụng Vue.JS</a></li>
-                  <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://changeable-list.herokuapp.com/">- Changeable list: demo sử dụng Jquery, DOM manipulation, REST API cơ bản</a></li>
+                  <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://ducnt444.github.io/planetary/" target="_blank">- PLANETARY: demo web về du lịch vũ trụ, sử dụng Vue.JS</a></li>
+                  <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://changeable-list.herokuapp.com/" target="_blank">- Changeable list: demo sử dụng Jquery, DOM manipulation, REST API cơ bản</a></li>
+                  <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://ducnt444.github.io/react-task-manager/" target="_blank">- Task manager: demo sử dụng React</a></li>
                 </ul>
                 <p class="mt-3 mb-2 text-center font-italic">ducnt444@gmail.com @ 2021</p>
               </div>
